--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mocking",
-  "version": "1.0.0",
-  "description": "imock, mock api requests for frontend & native developers, have local & remote mode.",
+  "version": "1.0.1",
+  "description": "mocking, mock api requests for frontend & native developers, have local & remote mode.",
   "main": "server.api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -37,7 +37,7 @@
     "fs-extra": "^0.12.0",
     "underscore": "^1.7.0"
   },
-  "imock":{
+  "mocking":{
 	"port":"8081"
   }
 }
