--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mocking",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "mocking, mock api requests for frontend & native developers, have local & remote mode.",
   "main": "server.api.js",
   "scripts": {
@@ -8,14 +8,15 @@
     "start": "node index.js"
   },
   "bin":{
-	"imock":"./bin/imock"
+	"mocking":"./bin/mocking"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/peichao01/imock.git"
+    "url": "https://github.com/peichao01/mocking.git"
   },
   "keywords": [
     "mock",
+	"imock",
 	"api",
     "mock server",
     "mock api",
@@ -27,9 +28,9 @@
   "author": "peichao <380692952@qq.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/peichao01/imock/issues"
+    "url": "https://github.com/peichao01/mocking/issues"
   },
-  "homepage": "https://github.com/peichao01/imock",
+  "homepage": "https://github.com/peichao01/mocking",
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.9.2",
